Собственный компилятор/grammer.txt
lang -> expr+
expr -> НАЗНАЧИТЬ_ВЫРАЖЕНИЕ | if_expr | while_expr
НАЗНАЧИТЬ_ВЫРАЖЕНИЕ -> ПЕРЕМЕННАЯ ОПЕРАЦИЯ_ПРИСВАИВАНИЯ (math_expr | СТРОКА) КОНЕЦ
value -> INT | СТРОКА | ПЕРЕМЕННАЯ

while_expr -> math_logic ПРАВАЯ_ФИГУРНАЯ expr ПРАВАЯ_ФИГУРНАЯ
if_expr -> math_logic ЛЕВАЯ_ФИГУРНАЯ expr ПРАВАЯ_ФИГУРНАЯ
ИНАЧЕ -> ЛЕВАЯ_ФИГУРНАЯ expr ПРАВАЯ_ФИГУРНАЯ

math_logic -> value (ЛОГИЧЕСКАЯ_ОПЕРАЦИЯ (logical_expr | math_expr))*
math_expr -> (value | math_expr_wbr)(OP math_expr)*
math_expr_wbr -> LP math_expr RP
